--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -28,7 +28,7 @@
     <!--forgot password text field-->
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/outlinedTextFieldForEmail"
+        android:id="@+id/logInEmailTextfield"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -65,6 +65,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldForEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/logInEmailTextfield" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
