--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
 
                  <!--email-->
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/outlinedTextFieldForEmail"
+        android:id="@+id/logInEmailTextfield"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,6 +23,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/logInEmailId"
             android:layout_width="match_parent"
             android:inputType="textEmailAddress"
             android:layout_height="wrap_content" />
@@ -31,7 +32,7 @@
 
     <!-- password-->
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/outlinedTextFieldForPassword"
+        android:id="@+id/logInPasswordtextfield"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -43,9 +44,10 @@
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldForEmail">
+        app:layout_constraintTop_toBottomOf="@+id/logInEmailTextfield">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/logInPasswordId"
             android:layout_width="match_parent"
             android:inputType="textPassword"
             android:layout_height="wrap_content" />
@@ -64,7 +66,7 @@
         android:text="Log In"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldForPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/logInPasswordtextfield" />
 
     <!--forgot password textfield-->
 
