--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -3,69 +3,89 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".loginandsignup.ForgotPasswordActivity">
 
-    <!--forgot password text field-->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-
-    <TextView
-        android:id="@+id/forgotPasswodId"
-        android:layout_width="336dp"
-        android:layout_height="64dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginEnd="32dp"
-        android:text="Enter the email you want to receive the password reset link"
-        android:textColor="#0C0C0C"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.64"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <!--forgot password text field-->
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/outlinedTextFieldForEmail"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:hint="e-mail"
-            app:endIconMode="clear_text"
-            app:layout_constraintEnd_toEndOf="@+id/forgotPasswodId"
-            app:layout_constraintStart_toStartOf="@+id/forgotPasswodId"
-            app:layout_constraintTop_toBottomOf="@+id/forgotPasswodId"
-            app:startIconDrawable="@drawable/baseline_email_24">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/ed_forgot_password_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textEmailAddress" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-    <!--The submit button for the forgot email-->
-
-        <Button
-            android:id="@+id/button_send_email"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            tools:context=".loginandsignup.ForgotPasswordActivity">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/tv_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/appColor"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="FORGOT PASSWORD"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:gravity="fill"
+                    android:textSize="18sp"
+                    android:layout_marginEnd="0dp" />
+
+            </androidx.appcompat.widget.Toolbar>
+
+
+            <TextView
+            android:id="@+id/forgotPasswodId"
+            android:layout_width="336dp"
+            android:layout_height="64dp"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="38dp"
+            android:layout_marginTop="160dp"
             android:layout_marginEnd="32dp"
-            android:text="Submit"
+            android:text="Enter the email you want to receive the password reset link"
+            android:textColor="#0C0C0C"
+            android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.64"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldForEmail" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/outlinedTextFieldForEmail"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:hint="e-mail"
+                app:endIconMode="clear_text"
+                app:layout_constraintEnd_toEndOf="@+id/forgotPasswodId"
+                app:layout_constraintStart_toStartOf="@+id/forgotPasswodId"
+                app:layout_constraintTop_toBottomOf="@+id/forgotPasswodId"
+                app:startIconDrawable="@drawable/baseline_email_24">
 
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ed_forgot_password_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textEmailAddress" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/button_send_email"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/button_custom_height"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="38dp"
+                android:layout_marginEnd="32dp"
+                android:text="Submit"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldForEmail" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
