--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="red">#FF0000</color>
+    <color name="appColor">#FF0000</color>
+    <color name="fragmentBg">#B8B8B8</color>
+    <color name="deep_sky_blue">#1565C0</color>
+    <color name="active_state_color">#FF03DAC5</color>
 </resources>
